# ontario-vegetable-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/frontend/: admin_app.py  streamlit_app.py
app/services/: ai_service.py  analysis_service.py  compare_service.py  config_service.py  data_health.py  data_validate.py  dataset_service.py  etl_service.py  llm_service.py  ontario_ckan_service.py  rag_chat_service.py  settings.py  vector_service.py
config/: app_config.json  vegetables.json
data/processed/: aggregated_cabbage_production_and_yields.csv  aggregated_carrot_production_and_yields.csv  aggregated_cucumber_production_and_yields.csv  aggregated_onion_production_and_yields.csv  aggregated_pepper_production_and_yields.csv  aggregated_pumpkin_production_and_yields.csv  aggregated_radishes_production_and_yields.csv  aggregated_sweet_corn_production_and_yields.csv  aggregated_tomato_production_and_yields.csv
data/vector_store/: index.faiss  metadata.json
ontario_vegetable_dashboard.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build_vector_index.py  debug_dataset.py  run_etl.py  validate_processed_data.py
tests/: conftest.py  test_ai_service.py  test_config_service.py  test_dataset_service.py  test_settings.py
