[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontario-vegetable-dashboard"
version = "0.4.0"
description = "Ontario vegetable dashboard with RAG over processed data"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
